2009-03-09  Tao Wang  <dancefire@gmail.com>
	* cpp/include/openclas/serialization.hpp:
	* cpp/include/openclas/segment.hpp:
	* cpp/include/openclas/utility.hpp:
	* cpp/src/unit_test/unit_test_segment.hpp:
		Add locale_platform for output to console under different platform.
		Replace corresponding locale_* to locale_platform.
	* cpp/src/unit_test/unit_test_longtime.hpp:
		Add function ms(clock_t tick), which output the time span in 'ms' since 'tick'.
	* cpp/src/unit_test/CMakeLists.txt:
		Add link flag for boost_iostreams under Linux.

2009-03-09  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/serialization.hpp:
		Add code to rasie exception if file cannot open.
		Fix several bugs.
		Implemented .gz of text format of dictionary.
	* cpp/include/openclas/utility.hpp:
		Add WORD_TAG_SIZE.
		
	* cpp/src/unit_test/OpenClas_VS2005.vcproj:
	* cpp/src/unit_test/OpenClas_VS2008.vcproj:
		Move some test to new file unit_test_longtime.hpp to centralize time-expensive unit testcases.
	* cpp/src/unit_test/unit_test.cpp:
		Move const char* sample[] from unit_test_segment.hpp.
	* cpp/src/unit_test/unit_test_longtime.hpp:
		Contain test_Serialization_dct_ocd_txt_gz, which read large dictionary from dct files, and then test
		it on .ocd, .txt, .gz format for both loading and saving. And generate the mini dict in text format.
	* cpp/src/unit_test/unit_test_segment.hpp:
		Load sample dictionary from the mini_dict generated by unit_test_longtime.hpp.
	* cpp/src/unit_test/unit_test_serialization.hpp:
		Add test case test_Serialization_load_tags_from_ctx().

2009-03-09  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/serialization.hpp:
		get_tag_from_pos() add recognition for WORD_TAG_BEGIN, WORD_TAG_END.
		load_tags_from_ctx() add symbol_table handling.
		Add save_to_txt_file() and load_from_txt_file().
	* cpp/include/openclas/utility.hpp:
		Add bg, mg, rg, ud, ug, uj, ul, uv, uz, yg based on existing POS tags in ICTCLAS dictionary.
